--- a/app/index.css
+++ b/app/index.css
@@ -1,7 +1,7 @@
 html{
   --bg: #FCFCFC;
   --bg-panel: #EBEBEB;
-	--color-headings: #0077FF;
+	--color-headings: #FFB900;
 	--color-text: #585858;
   --min-logo: url('../assets/min.png');
 	--cls-logo: url('../assets/close.png');
@@ -12,7 +12,7 @@ html[data-theme='dark'] {
   --bg: #333333;
 	--bg-panel: #434343;
 	--color-text: #E5E5E5;
-  --color-headings: #3694FF;
+  --color-headings: #00B6FF;
   --min-logo: url('../assets/min-white.png');
 	--cls-logo: url('../assets/close-white.png');
   --reset-logo: url('../assets/reset-white.png');
@@ -20,6 +20,7 @@ html[data-theme='dark'] {
 
 body {
 	background: var(--bg);
+  font-family: 'Lacquer', sans-serif;
 }
 
 input[type=checkbox]{
@@ -55,7 +56,7 @@ html.transition *:after {
 }
 
 #set{
-	background-color: var(--bg);
+	background-color: var(--color-headings);
 	margin-top: 7px;
 	margin-left: 5px;
 	margin-right: 5px;
@@ -64,7 +65,7 @@ html.transition *:after {
 	text-indent: -9999px;
 	width: 48px;
 	height: 26px;
-	background: grey;
+	background: #FFB600;
 	float: right;
 	border-radius: 100px;
 	position: relative;
@@ -73,14 +74,14 @@ html.transition *:after {
 }
 
 #set:after{
-	background-color: var(--bg);
+	background-color: var(--color-headings);
 	content: '';
 	position: absolute;
 	top: 3px;
 	left: 3px;
 	width: 20px;
 	height: 20px;
-	background: #fff;
+	background: #00FFBD;
 	border-radius: 100px;
 	transition: 0.3s;
 }
@@ -88,7 +89,8 @@ html.transition *:after {
 #logo{
 	background-color: var(--bg);
 	float: left;
-  padding-top: 2px;
+  padding-top: 3px;
+  margin-left: 10px;
 	height: 35px;
 	width: 35px;
 	-webkit-app-region: no-drag;
@@ -97,7 +99,7 @@ html.transition *:after {
 
 #app__title{
 	color: var(--color-text);
-  padding-left: 5px;
+  padding-left: 2px;
 	margin-bottom: 5px;
 	font-size: 2.7vh;
 	-webkit-app-region: drag;
@@ -109,11 +111,23 @@ html.transition *:after {
   background-position: center;
   background-size: 20px 20px;
   margin-top: 100px;
-	margin-right: 300px;
   margin-bottom: 10px;
+  margin-right: 10px;
 	height: 30px;
 	width: 50px;
   float:right;
+	-webkit-app-region: no-drag;
+	-webkit-user-select: none;
+}
+
+#reset_info{
+  color: var(--color-text);
+  margin-top: 95px;
+	margin-right: 190px;
+  margin-bottom: 10px;
+  height: 30px;
+  float:right;
+  font-size: 2.3vh;
 	-webkit-app-region: no-drag;
 	-webkit-user-select: none;
 }
@@ -183,7 +197,7 @@ html.transition *:after {
   float: left;
   margin-left: 60px;
   margin-top: 65px;
-  font-size: 1.7vh;
+  font-size: 2.2vh;
   position: relative;
 }
 
@@ -192,7 +206,7 @@ html.transition *:after {
   margin-left: 20px;
   padding: 10px;
   display: inline-block;
-  border: 4px solid var(--bg-panel);
+  border: 4px solid var(--color-text);
   float: left;
   grid-column: auto;
   position: relative;
@@ -216,7 +230,7 @@ html.transition *:after {
 }
 
 .chessBoard:hover td{
-  transform: scale(0.95);
+  transform: scale(0.97);
 }
 
 .chessBoard:hover td:hover{
@@ -231,13 +245,15 @@ html.transition *:after {
   float: right;
   margin-left: 10px;
   margin-top: 10px;
-  margin-right: 120px;
-  overflow-y: visible;
+  margin-right: 80px;
+  overflow-y:visible;
   overflow-x: hidden;
   resize: none;
   padding: 10px;
   height: 60vh;
   width: 30vh;
   text-align: center;
-  font-weight: bold; 
+  font-weight: bold;
+  font-size: 2vh;
+  line-height: 8px;
 }
