--- a/app/index.css
+++ b/app/index.css
@@ -110,9 +110,8 @@ html.transition *:after {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px 20px;
-  margin-top: 100px;
-  margin-bottom: 10px;
-  margin-right: 10px;
+  margin-top: 10vh;
+  margin-bottom: 2vh;
 	height: 30px;
 	width: 50px;
   float:right;
@@ -122,9 +121,10 @@ html.transition *:after {
 
 #reset_info{
   color: var(--color-text);
-  margin-top: 95px;
-	margin-right: 190px;
+  margin-top: 10vh;
+  margin-right: 14em;
   margin-bottom: 10px;
+  margin-left: 5px;
   height: 30px;
   float:right;
   font-size: 2.3vh;
@@ -178,13 +178,11 @@ html.transition *:after {
   display: grid;
   grid-template-columns: 81px 81px 81px 81px 81px 81px 81px 81px;
   grid-template-rows: auto;
-  text-align: center;
-  justify-content: center;
   font-weight: bold;
   font-size: 2vh;
-  margin-right: 350px;
-  margin-top: 40px;
-  position: relative;
+  margin-left: 12vw;
+  margin-top: 8vh;
+  position: static;
 }
 
 .grid-container-1{
@@ -195,15 +193,15 @@ html.transition *:after {
   text-align: center;
   font-weight: bold;
   float: left;
-  margin-left: 60px;
-  margin-top: 65px;
+  margin-left: 8vw;
+  margin-top: 5vh;
   font-size: 2.2vh;
   position: relative;
 }
 
 .chessBoard {
-  margin-top: 20px;
-  margin-left: 20px;
+  margin-top: 1.5vh;
+  margin-left: 2vw;
   padding: 10px;
   display: inline-block;
   border: 4px solid var(--color-text);
@@ -243,17 +241,17 @@ html.transition *:after {
   border: none;
   border-radius: 10px;
   float: right;
-  margin-left: 10px;
-  margin-top: 10px;
-  margin-right: 80px;
+  margin-top: 8px;
+  margin-left: 80px;
+  margin-right: 8vw;
   overflow-y:visible;
   overflow-x: hidden;
   resize: none;
   padding: 10px;
-  height: 60vh;
-  width: 30vh;
+  height: 600px;
+  width: 25vw;
   text-align: center;
   font-weight: bold;
-  font-size: 2vh;
-  line-height: 8px;
+  font-size: 2.2vh;
+  line-height: 1.2vh;
 }
