--- a/app/index.css
+++ b/app/index.css
@@ -69,6 +69,7 @@ html.transition *:after {
 	float: right;
 	border-radius: 100px;
 	position: relative;
+  user-select: none;
 	-webkit-app-region: no-drag;
 	-webkit-user-select: none;
 }
@@ -94,7 +95,6 @@ html.transition *:after {
 	height: 35px;
 	width: 35px;
 	-webkit-app-region: no-drag;
-	-webkit-user-select: none;
 }
 
 #app__title{
@@ -102,7 +102,9 @@ html.transition *:after {
   padding-left: 2px;
 	margin-bottom: 5px;
 	font-size: 2.7vh;
+  user-select: none;
 	-webkit-app-region: drag;
+  -webkit-user-select: none;
 }
 
 #reset{
@@ -116,19 +118,21 @@ html.transition *:after {
 	width: 50px;
   float:right;
 	-webkit-app-region: no-drag;
+  user-select: none;
 	-webkit-user-select: none;
 }
 
 #reset_info{
   color: var(--color-text);
   margin-top: 10vh;
-  margin-right: 14em;
+  margin-right: 11em;
   margin-bottom: 10px;
   margin-left: 5px;
   height: 30px;
   float:right;
   font-size: 2.3vh;
 	-webkit-app-region: no-drag;
+  user-select: none;
 	-webkit-user-select: none;
 }
 
@@ -143,6 +147,7 @@ html.transition *:after {
 	margin-bottom: 5px;
 	height: 30px;
 	width: 30px;
+  user-select: none;
 	float: right;
 	-webkit-app-region: no-drag;
 	-webkit-user-select: none;
@@ -160,6 +165,7 @@ html.transition *:after {
 	height: 30px;
 	width: 30px;
 	float: right;
+  user-select: none;
 	-webkit-app-region: no-drag;
 	-webkit-user-select: none;
 }
@@ -176,67 +182,121 @@ html.transition *:after {
 .grid-container-a {
   color: var(--color-text);
   display: grid;
-  grid-template-columns: 81px 81px 81px 81px 81px 81px 81px 81px;
+  grid-template-columns: 75px 75px 75px 75px 75px 75px 75px 75px;
   grid-template-rows: auto;
   font-weight: bold;
   font-size: 2vh;
-  margin-left: 12vw;
+  margin-left: 14vw;
   margin-top: 8vh;
   position: static;
+  user-select: none;
 }
 
 .grid-container-1{
   color: var(--color-text);
   display: grid;
   grid-template-columns:auto;
-  grid-template-rows: 80px 80px 80px 80px 80px 80px 80px 80px;
+  grid-template-rows: 75px 75px 75px 75px 75px 75px 75px 75px;
   text-align: center;
   font-weight: bold;
   float: left;
   margin-left: 8vw;
-  margin-top: 5vh;
+  margin-top: 6.2vh;
   font-size: 2.2vh;
   position: relative;
+  user-select: none;
 }
 
-.chessBoard {
-  margin-top: 1.5vh;
-  margin-left: 2vw;
-  padding: 10px;
-  display: inline-block;
+#table{
+  position: absolute;
+  top: 19vh;
+  left: 13vw;
+  width: 620px;
+  height: 620px;
   border: 4px solid var(--color-text);
-  float: left;
-  grid-column: auto;
-  position: relative;
+  text-align: center;
+  align-items: center;
+  justify-items: center;
+  padding-top: 12px;
 }
 
-.chessBoard tr {
-  line-height: 1px;
-}
-
-.chessBoard td {
+.row{
   display: inline-block;
-  width: 80px;
-  height: 80px;
-  background-color: snow;
-  opacity:1;
-  font-size: 20px;
-  color: var(--color-text);
-  font-weight: bold;
-  padding-left: 20px;
-  padding-top: 20px;
 }
 
-.chessBoard:hover td{
-  transform: scale(0.97);
+.column{
+  width: 75px;
+  height: 75px;
+  float: left;
+  margin-top: -6px;
 }
 
-.chessBoard:hover td:hover{
-  transform:scale(1);
+.column.selected{
+  background: yellow;
+}
+
+.column.cango{
+  background: orange;
+}
+
+.piece{
+  cursor: pointer;
+  text-align: center;
+  align-items: center;
+  position: relative;
+  width: 45px;
+  height: 45px;
+  margin-left: 15px;
+  margin-top: 15px;
+  background: transparent;
+  justify-content: center;
+  user-select: none;
+
+}
+
+.piece.bishop.black {
+	content: url('../assets/pieces/bishop.png');
+}
+.piece.king.black {
+  content: url('../assets/pieces/king.png');
+}
+.piece.knight.black {
+	content: url('../assets/pieces/knight.png');
+}
+.piece.pawn.black {
+  content: url('../assets/pieces/pawn.png');
+}
+.piece.queen.black {
+  content: url('../assets/pieces/queen.png');
+}
+.piece.rook.black {
+  content: url('../assets/pieces/rook.png');
+}
+/* White */
+.piece.bishop.white {
+  content: url('../assets/pieces/bishop-white.png');
+}
+.piece.king.white {
+  content: url('../assets/pieces/king-white.png');
+}
+.piece.knight.white {
+  content: url('../assets/pieces/knight-white.png');
+}
+.piece.pawn.white {
+  content: url('../assets/pieces/pawn-white.png');
+}
+.piece.queen.white {
+  content: url('../assets/pieces/queen-white.png');
+}
+.piece.rook.white {
+  content: url('../assets/pieces/rook-white.png');
 }
 
 #position{
+  position: absolute;
   color: var(--color-text);
+  top: 20vh;
+  left: 60vw;
   background-color: var(--bg-panel);
   border: none;
   border-radius: 10px;
