--- a/app/index.css
+++ b/app/index.css
@@ -6,6 +6,7 @@ html{
   --min-logo: url('../assets/min.png');
 	--cls-logo: url('../assets/close.png');
   --reset-logo: url('../assets/reset-black.png');
+  --swap-logo: url('../assets/swap.png');
 }
 
 html[data-theme='dark'] {
@@ -16,6 +17,7 @@ html[data-theme='dark'] {
   --min-logo: url('../assets/min-white.png');
 	--cls-logo: url('../assets/close-white.png');
   --reset-logo: url('../assets/reset-white.png');
+  --swap-logo: url('../assets/swap-white.png');
 }
 
 body {
@@ -124,8 +126,39 @@ html.transition *:after {
 
 #reset_info{
   color: var(--color-text);
+  letter-spacing: 1px;
+  margin-top: 9.8vh;
+  margin-right: 8em;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  height: 30px;
+  float:right;
+  font-size: 2.3vh;
+	-webkit-app-region: no-drag;
+  user-select: none;
+	-webkit-user-select: none;
+}
+
+#change{
+  background-image: var(--swap-logo);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px 20px;
   margin-top: 10vh;
-  margin-right: 11em;
+  margin-bottom: 2vh;
+	height: 30px;
+	width: 50px;
+  float:right;
+	-webkit-app-region: no-drag;
+  user-select: none;
+	-webkit-user-select: none;
+}
+
+#change_info{
+  color: var(--color-text);
+  letter-spacing: 1px;
+  margin-top: 9.8vh;
+  margin-right: 20px;
   margin-bottom: 10px;
   margin-left: 5px;
   height: 30px;
@@ -182,11 +215,11 @@ html.transition *:after {
 .grid-container-a {
   color: var(--color-text);
   display: grid;
-  grid-template-columns: 75px 75px 75px 75px 75px 75px 75px 75px;
+  grid-template-columns: 80px 80px 80px 80px 80px 80px 80px 80px;
   grid-template-rows: auto;
   font-weight: bold;
   font-size: 2vh;
-  margin-left: 14vw;
+  margin-left: 13.5vw;
   margin-top: 8vh;
   position: static;
   user-select: none;
@@ -196,12 +229,12 @@ html.transition *:after {
   color: var(--color-text);
   display: grid;
   grid-template-columns:auto;
-  grid-template-rows: 75px 75px 75px 75px 75px 75px 75px 75px;
+  grid-template-rows: 80px 80px 80px 80px 80px 80px 80px 80px ;
   text-align: center;
   font-weight: bold;
   float: left;
   margin-left: 8vw;
-  margin-top: 6.2vh;
+  margin-top: 6.1vh;
   font-size: 2.2vh;
   position: relative;
   user-select: none;
@@ -211,13 +244,13 @@ html.transition *:after {
   position: absolute;
   top: 19vh;
   left: 13vw;
-  width: 620px;
-  height: 620px;
+  width: 650px;
+  height: 650px;
   border: 4px solid var(--color-text);
   text-align: center;
   align-items: center;
   justify-items: center;
-  padding-top: 12px;
+  padding-top: 8px;
 }
 
 .row{
@@ -228,7 +261,7 @@ html.transition *:after {
   width: 75px;
   height: 75px;
   float: left;
-  margin-top: -6px;
+  margin : -1px 2px;
 }
 
 .column.selected{
@@ -244,14 +277,13 @@ html.transition *:after {
   text-align: center;
   align-items: center;
   position: relative;
-  width: 45px;
-  height: 45px;
-  margin-left: 15px;
+  width: 40px;
+  height: 40px;
+  margin-left: 8px;
   margin-top: 15px;
   background: transparent;
   justify-content: center;
   user-select: none;
-
 }
 
 .piece.bishop.black {
