--- a/app/css/style.css
+++ b/app/css/style.css
@@ -333,6 +333,7 @@ html.transition *:after {
   outline: none;
   border-radius: 5px;
   color: var(--bg);
+  cursor: pointer;
 }
 
 #NewGameButton {
